--- a/main.css
+++ b/main.css
@@ -9,3 +9,28 @@ div {
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
+
+
+
+#Red { /* this selects any elements with the red id */
+  border-top-color: #f00;
+}
+
+#Orange{ /* this selects any elements with the red id */
+  border-top-color: #ffa500;
+}
+#Yellow { /* this selects any elements with the red id */
+  border-top-color: #ff0;
+}
+#Green { /* this selects any elements with the red id */
+  border-top-color: #00bc3f;
+}
+#Blue { /* this selects any elements with the red id */
+  border-top-color: #06f;
+}
+#Indigo { /* this selects any elements with the red id */
+  border-top-color: #8a2be2;
+}
+#Violet { /* this selects any elements with the red id */
+  border-top-color: #d300c9;
+}
