--- a/main.css
+++ b/main.css
@@ -8,4 +8,14 @@ div {
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
-}
+  }
+	
+	#red {/* this selects any elements with the red id */ 
+	  border-top-color: #f00;
+	}
+	#Orange {border-top-color: #ffa500;}
+	#Yellow {border-top-color: #ff0;}
+	#Green {border-top-color: #00bc3f;}
+	#Blue {border-top-color: #06f;}
+	#Indigo {border-top-color: #8a2be2;}
+	#Violet {border-top-color: #d300c9;}
